Add accessibility labels and localization

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,6 @@
     },
     "types": ["node", "vite/client"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/**/*.json"],
   "exclude": ["node_modules"]
 }
