--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@fastify/pre-commit": "^2.2.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.89.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.2.12"
   }
 }
