--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pinia": "^3.0.3",
     "vite-plugin-pwa": "^1.0.2",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
     "decimal.js": "10.6.0"
   },
   "devDependencies": {
@@ -26,7 +26,7 @@
     "@vue/tsconfig": "^0.7.0",
     "jsdom": "^26.1.0",
     "sass": "^1.89.2",
-    "typescript": "~5.8.3",
+    "typescript": "~5.6.0",
     "vite": "^7.0.4",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.12"
